--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,17 @@
 {
   "env": {
-    "es2022": true,
+    "es2022": true
   },
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "eslint-config-prettier",
+    "eslint-config-prettier"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": "./tsconfig.json",
     "ecmaVersion": "latest",
-    "sourceType": "module",
+    "sourceType": "module"
   },
   "ignorePatterns": ["**/node_modules/", "**/dist/"],
   "overrides": [
@@ -20,29 +20,29 @@
       "parserOptions": {
         "project": "./tsconfig.json",
         "ecmaFeatures": {
-          "jsx": true,
-        },
+          "jsx": true
+        }
       },
       "env": {
-        "browser": true,
+        "browser": true
       },
       "extends": [
         "plugin:react/recommended",
         "plugin:react/jsx-runtime",
         "plugin:cypress/recommended",
         "plugin:react-hooks/recommended",
-        "plugin:jsx-a11y/recommended",
+        "plugin:jsx-a11y/recommended"
       ],
       "plugins": ["react-refresh"],
       "settings": {
         "react": {
-          "version": "detect",
-        },
+          "version": "detect"
+        }
       },
       "rules": {
         "react-refresh/only-export-components": [
           "warn",
-          { "allowConstantExport": true },
+          { "allowConstantExport": true }
         ],
         "semi": ["error", "never"],
         "no-console": "error",
@@ -55,21 +55,21 @@
             "selector": "variable",
             "types": ["function"],
             "format": ["camelCase", "PascalCase"],
-            "leadingUnderscore": "allow",
+            "leadingUnderscore": "allow"
           },
           {
             "selector": "variable",
             "types": ["boolean", "number", "string", "array"],
             "format": ["camelCase", "UPPER_CASE"],
-            "leadingUnderscore": "allow",
+            "leadingUnderscore": "allow"
           },
           {
             "selector": "typeLike",
-            "format": ["PascalCase"],
-          },
+            "format": ["PascalCase"]
+          }
         ],
-        "no-nested-ternary": "error",
-      },
-    },
-  ],
+        "no-nested-ternary": "error"
+      }
+    }
+  ]
 }
