--- a/server/package.json
+++ b/server/package.json
@@ -7,11 +7,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "tsc",
-    "start": "npm run compile && node ./dist/index.js"
+    "start": "npm run compile && node ./dist/index.js",
+    "lint": "eslint ./src/**/*.ts"
   },
   "author": "",
   "devDependencies": {
     "@types/node": "^20.11.25",
-    "typescript": "^5.4.2"
+    "typescript": "^5.3.3"
   }
 }
